syntax = "proto3";

package loganalysis;

service LogAnalysis {
  rpc AnalyseLog(AnalyseLogRequest) returns (AnalyseLogResult) {}
}

message AnalyseLogRequest {
  string log = 1;
}

message AnalyseLogResult {
  bool ipBlacklisted = 1;
  string ipAddress = 2;
  string timeProcessed = 3;
}
